# certify

./: .gitignore  LICENSE  README.md  batch_generate.py  certify_attendance.py  generate_certificate.py  main.py  pyproject.toml
.github/workflows/: ci.yml  publish-pypi-oidc.yml
certify/: __init__.py  batch_generate.py  certify_attendance.py  conftest.py  generate_certificate.py
tests/: test_batch.py  test_email_jobs.py  test_in_memory.py  test_main.py
