[project]
name = "certify"
version = "0.1.1"
description = "Generate PDF attendance certifications, ready to email, on the command line or in a batch from a CSV file."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "python-docx>=1.2.0",
    "reportlab>=4.4.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["generate_certificate", "main", "batch_generate"]
